--- a/templates/forum/topic.html
+++ b/templates/forum/topic.html
@@ -319,7 +319,7 @@ method="POST" id="submit_form">
     <script>
         /* anwser check */
         $('#submit_form').submit(function(e){
-            if ((!$(this).find('textarea').val()) || ($(this).find('textarea').val().replace(/^\s+/g,'').replace(/\s+$/g,'')=="")) {
+            if ((!$(this).find('textarea').val()) || ($(this).find('textarea').val().trim()=='')) {
                 alert('Votre message ne peut pas être vide.');
                 e.preventDefault();
             }
