--- a/templates/base.html
+++ b/templates/base.html
@@ -502,6 +502,7 @@
                 inlineMath: [['$', '$'], ['\\(', '\\)']],
                 processEscapes: true,
             },
+            TeX: { extensions: ["color.js", "cancel.js", "enclose.js", "bbox.js", "mathchoice.js", "newcommand.js", "verb.js", "unicode.js", "autobold.js", "MathZoom.js"] },
             messageStyle: "none",
         });
     </script>
