--- a/assets/css/scss/_mobile.scss
+++ b/assets/css/scss/_mobile.scss
@@ -44,4 +44,27 @@
             line-height: 50px;
         }
     }
+
+    form.forum-message .message {
+        padding-top: 0 !important;
+    }
+    .message-buttons,
+    .message-actions {
+        display: none !important;
+    }
+    .message-submit {
+        display: block !important;
+        width: calc(100% - 16px);
+        margin: 0 8px !important;
+
+        button {
+            float: left;
+            display: block;
+            width: 49.5%;
+
+            &[type=submit] {
+                float: right;
+            }
+        }
+    }
 }
