Add mail validation in register

--- a/templates/member/register_success.html
+++ b/templates/member/register_success.html
@@ -17,7 +17,10 @@
 <div class="row">
     <div class="large-12 columns">
         <p>
-            Vous avez bien été inscrit au site. <a href="{% url "zds.member.views.details" user.username %}">Voir votre profil</a>.
+            Vous avez bien été inscrit au site.
+        </p>
+        <p>
+            Vous avez reçu un email vous permettant de valider votre adresse mail, lisez le et suivez les instructions pour profiter pleinement des fonctionnalités de ZesteDeSavoir
         </p>
     </div>
 </div>
