--- a/templates/base.html
+++ b/templates/base.html
@@ -334,6 +334,7 @@
                             </div>
 
                             <div>
+                                {% with profile=user|profile %}
                                 <a href="{% url "zds.member.views.actions" %}" 
                                    id="my-account"
                                    class="my-account mobile-menu-link mobile-menu-bloc dont-click-if-sidebar" 
@@ -348,7 +349,7 @@
                                     <img src="{{ profile.get_avatar_url }}" alt="" class="avatar">
                                     <span class="username label">{{ user.username }}</span>
                                 </a>
-
+                                {% endwith %}
                                 <div class="dropdown my-account-dropdown mobile-menu-bloc mobile-all-links" data-title="Mon compte">
                                     <span class="dropdown-title">Mon Compte</span>
 
@@ -495,31 +496,6 @@
 
 
 
-    {# MathJax #}
-    <script type="text/x-mathjax-config">
-        MathJax.Hub.Config({
-            tex2jax: {
-                inlineMath: [['$', '$'], ['\\(', '\\)']],
-                processEscapes: true,
-            },
-            TeX: { extensions: ["color.js", "cancel.js", "enclose.js", "bbox.js", "mathchoice.js", "newcommand.js", "verb.js", "unicode.js", "autobold.js", "MathZoom.js"] },
-            messageStyle: "none",
-        });
-    </script>
-    <script type="text/javascript" src="https://c328740.ssl.cf1.rackcdn.com/mathjax/latest/MathJax.js?config=TeX-AMS-MML_HTMLorMML"></script>
-
     
-    <!-- Analytics -->
-    <script>
-      (function(i,s,o,g,r,a,m){i['GoogleAnalyticsObject']=r;i[r]=i[r]||function(){
-      (i[r].q=i[r].q||[]).push(arguments)},i[r].l=1*new Date();a=s.createElement(o),
-      m=s.getElementsByTagName(o)[0];a.async=1;a.src=g;m.parentNode.insertBefore(a,m)
-      })(window,document,'script','//www.google-analytics.com/analytics.js','ga');
-    
-      ga('create', 'UA-27730868-1', 'zestedesavoir.com');
-      ga('send', 'pageview');
-    
-    </script>
-    <!-- Analytics -->
 </body>
 </html>
