--- a/templates/home.html
+++ b/templates/home.html
@@ -35,7 +35,7 @@ class="active"
                     <h3><a href="{{ article.get_absolute_url_online }}">{{ article.title }}</a></h3>
                     <p class="article-metadata">
                         {{ article.pubdate|humane_date }} -
-                        <a href="{{ article.get_last_answer.get_absolute_url }}">23 réactions</a>
+                        <a href="{{article.get_last_reaction.get_absolute_url}}">{{ article.get_reaction_count }} réactions</a>
                     </p>
                     <a href="{{ article.get_absolute_url_online }}" 
                        tabindex="-1"
@@ -58,14 +58,14 @@ class="active"
         {% if last_tutorials %}
             {% for tutorial in last_tutorials %}
                 <article>
-                    <a href="{{ tutorial.get_absolute_url_prod }}">
+                    <a href="{{ tutorial.get_absolute_url_online }}">
                         <img src="{{ tutorial.image.thumb.url }}" alt="" class="tutorial-img avatar">
                         <div class="tutorial-infos">
                             <h3>{{ tutorial.title }}</h3>
                             
                             <p class="article-metadata">
-                                {% if tutorial.category %}
-                                    {% for category in tutorial.category.all %}
+                                {% if tutorial.subcategory %}
+                                    {% for category in tutorial.subcategory.all %}
                                         {{ category.title }}                                    
                                     {% endfor %}
                                 {% endif %}
